fix centered-form helper on small screens

--- a/source/stylesheets/development.css.scss
+++ b/source/stylesheets/development.css.scss
@@ -55,8 +55,3 @@ body {
     }
   }
 }
-
-.centered-form {
-  margin: 2em auto;
-  width: 500px;
-}
